--- a/blogapp/templates/base.html
+++ b/blogapp/templates/base.html
@@ -11,6 +11,14 @@
 <body>
     <header><h1 ><a href="/">My personal blog</a></h1></header>
     <div class="container">
+        {% if user.is_authenticated %}
+        <p>You are logged in </p>
+        <p>hey there: {{user.username}}</p>
+        <p>Please <a href="{% url 'logout' %}">Logout</a> here</p>
+        {% else %}
+        <p>You are not logged in </p>
+        <p>Please <a href="{% url 'login' %}">login</a> here</p>
+        {% endif %}
         {% block content %}
         {% endblock content %}
     </div>
